feat(api): add APIRequestContext.addCookies
